--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
 <script src="js/ts-embed.min.js"></script>
 <script src="src/EmbedSamples.js"></script>
 <script>
-    var loader = new xp.EmbedLoader();
+    var loader = new tsembed.EmbedLoader();
     loader.load('bin/embedOutput.tse').then(function(){
 
         EmbedUtils.injectScript(EmbedSamples.BasicExample).then(function(){
